# level3_recsys_finalproject-recsys-07

./: .pre-commit-config.yaml  README.md  preprocessing.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
backend/: README.md  main.py  requirements.txt
backend/routers/: data.py
d3/: ridgeline.html  wordclouds.html
data/: data_format.csv  data_format_short.csv  user_format.csv
data/durecdial/: dev.csv  df_eda.ipynb  durec_json2csv.ipynb  en_dev.txt  preprocess_sent_split.ipynb  preprocessing.ipynb  preprocessing_sep.ipynb  train_sentence_xs.csv  train_user.csv  train_user_small.csv  train_user_xs.csv
data/model_metric/: Redial  model_eval.csv  model_eval_percent.csv  model_metrics.ipynb
data/multiwoz/: multiwoz_eda.ipynb
data_science/: distinct_n_gram.ipynb  draw_charts.ipynb  model_eval_data.ipynb  perplexity.ipynb  sucess_fail.ipynb  user_profile_embedding.ipynb
data_science/model_metric/: KGSF  insp  model_metrics.ipynb
frontend/: README.md  app.py
frontend/.ipynb_checkpoints/: README-checkpoint.md
frontend/assets/: data.py  figure.py  header.py  ngram.py  ngram.txt  perflexity.py  perflexity.txt  sidebar.py  style.css
frontend/pages/: dashboard.py  dataanalysis.py  instance.py  introduction.py  modelevaluation.py  overview.py  qual_viz.py  quan_viz.py  readme.py
frontend/ver_1/: app.py
frontend/ver_2/: app.py  sidebar_ex.py
graph/: graph.ipynb
plotly/: draw_charts.ipynb  draw_pie_chart.ipynb  perplexity.ipynb  user_figure.ipynb
plotly/model_metric/: KBRD
sentiment/: sentiment.ipynb
(+18 files in other folders)
