[tool.poetry]
name = "rechat"
version = "0.1.0"
description = "recsys chat"
authors = ["osmin625 <tmdals179@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.99.1"
dash = "^2.11.1"
black = "^23.3.0"
pytest = "^7.4.0"
dash-bootstrap-templates = "^1.0.8"
pandas = "^2.0.3"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
ipykernel = "^6.24.0"
pytailwindcss = "^0.2.0"
jinja2 = "^3.1.2"
networkx = "^3.1"
nltk = "^3.8.1"
stop-words = "^2018.7.23"
transformers = "^4.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
